# COE322

./: README.md  fizzbuzz.cpp  norms.cpp
hw2/: #fizzbuzz.cpp#  .#fizzbuzz.cpp  fizzbuzz.cpp
hw3/: collatz.cpp
hw4/: CMakeLists.txt  CMakeLists.txt~  newton-lambda.cpp  newton_rootfd_hw.cpp
hw5/: #fizzbuzz.cpp#  CMakeLists.txt  fizzbuzz  fizzbuzz.cpp  fizzbuzz.sh
hw6/: CMakeLists.txt  CMakeLists.txt~  perfNum  perfNum.cpp  perfNum.cpp~
hw7/: #CMakeLists.txt#  #halfway.cpp#  .#halfway.cpp  CMakeLists.txt  halfway.cpp
hw8/: CMakeLists.txt  CMakeLists.txt~  pascal.cpp
hw9/: CMakeLists.txt  CMakeLists.txt~  linkshared.cpp  linkshared.cpp~
src/: CMakeLists.txt  newton.cpp
